--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 
 <body>
 
-    <div class="hero">
-
-    </div>
+    <header class="hero">
+        <nav class="navBar">
+            <img src="assets/logo.png" alt="" class="logo">
+            <button type="submit">Sign Up</button>
+        </nav>
+    </header>
 
 </body>
 
