--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             <img src="assets/logo.png" alt="" class="logo">
             <button type="submit">Sign Up</button>
         </nav>
+        <div class="hero-content">
+            <small>Welcome to our</small>
+            <h1>World's <br> Creative Studio</h1>
+            <button type="submit">Take a tour</button>
+        </div>
+        <div class="side-bar">
+            
+        </div>
     </header>
 
 </body>
