--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
             <button type="submit">Take a tour</button>
         </div>
         <div class="side-bar">
-            
+            <img src="assets/menu.png" alt="" class="side-bar-img">
+            <div class="social-icons">
+                <img src="assets/fb.png" alt="">
+                <img src="assets/ig.png" alt="">
+                <img src="assets/tw.png" alt="">
+            </div>
+
+            <div class="usefull-icons">
+                <img src="assets/share.png" alt="">
+                <img src="assets/info.png" alt="">
+            </div>
         </div>
     </header>
 
