--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
                 <img src="assets/info.png" alt="">
             </div>
         </div>
+        <div class="bubbles">
+            <img src="assets/bubble.png" alt="">
+            <img src="assets/bubble.png" alt="">
+            <img src="assets/bubble.png" alt="">
+            <img src="assets/bubble.png" alt="">
+            <img src="assets/bubble.png" alt="">
+            <img src="assets/bubble.png" alt="">
+            <img src="assets/bubble.png" alt="">
+            <img src="assets/bubble.png" alt="">
+        </div>
     </header>
 
 </body>
